--- a/Bosta_Thrift_Fashion/Index.html
+++ b/Bosta_Thrift_Fashion/Index.html
@@ -907,4 +907,4 @@
   </body>
 </html>
 <!-- JAVASCRIPT -->
-<script type="text/javascript" src="js/main.js"></script> -->
+<script type="text/javascript" src="js/main.js"></script>
