--- a/Bosta_Alberto/index.html
+++ b/Bosta_Alberto/index.html
@@ -51,7 +51,7 @@
    <link rel="icon" href="./img/alberto watch logo.png" type="png/img" style="width: 20000px;">
     <title>Alberto Clock</title>
 </head>
-<body style="background-color: #dddddd;>
+<body style="background-color: #dddddd;">
 <!-- header section -->
 <nav class="navbar navbar-expand-lg navbar-light" id="navb">
   <!-- scroll to top Button -->
