--- a/Bosta_Thrift_Fashion/Index.html
+++ b/Bosta_Thrift_Fashion/Index.html
@@ -1,7 +1,7 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <-- search script -->
+    <!-- search script -->
     <script src="js/jquery-3.6.0.min.js"></script>
     <script>
       $(document).ready(function () {
